[gd_scene load_steps=13 format=3 uid="uid://o8vtjfc3yy6l"]

[ext_resource type="Script" path="res://Scripts/proc_gen_world.gd" id="1_cav6w"]
[ext_resource type="Texture2D" uid="uid://ca127dsmlmdo5" path="res://Environment/Tileset/Water.png" id="2_4n0m0"]
[ext_resource type="Texture2D" uid="uid://dgf4fyypiwp83" path="res://Environment/Tileset/Tilemap_Flat.png" id="4_6611v"]

[sub_resource type="Gradient" id="Gradient_kf0gk"]
interpolation_mode = 1
offsets = PackedFloat32Array(0, 0.304348, 0.530435, 0.747826, 1)
colors = PackedColorArray(0.0675381, 0.305352, 1, 1, 0.767444, 0.574031, 0.135925, 1, 0.258342, 0.623515, 0.222013, 1, 0.109023, 0.182544, 0.204264, 1, 1, 1, 1, 1)

[sub_resource type="FastNoiseLite" id="FastNoiseLite_b6gjl"]
noise_type = 3
seed = 208
frequency = 0.0227

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_vxu8c"]
color_ramp = SubResource("Gradient_kf0gk")
noise = SubResource("FastNoiseLite_b6gjl")

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_75r23"]
texture = ExtResource("2_4n0m0")
texture_region_size = Vector2i(64, 64)
0:0/0 = 0

[sub_resource type="TileSet" id="TileSet_8xmid"]
tile_size = Vector2i(64, 64)
sources/0 = SubResource("TileSetAtlasSource_75r23")

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_06mjm"]
texture = ExtResource("4_6611v")
texture_region_size = Vector2i(64, 64)
5:0/0 = 0
5:0/0/terrain_set = 0
5:0/0/terrain = 0
5:0/0/terrains_peering_bit/right_side = 0
5:0/0/terrains_peering_bit/bottom_side = 0
6:0/0 = 0
6:0/0/terrain_set = 0
6:0/0/terrain = 0
6:0/0/terrains_peering_bit/right_side = 0
6:0/0/terrains_peering_bit/bottom_side = 0
6:0/0/terrains_peering_bit/left_side = 0
7:0/0 = 0
7:0/0/terrain_set = 0
7:0/0/terrain = 0
7:0/0/terrains_peering_bit/bottom_side = 0
7:0/0/terrains_peering_bit/left_side = 0
8:0/0 = 0
8:0/0/terrain_set = 0
8:0/0/terrain = 0
8:0/0/terrains_peering_bit/bottom_side = 0
9:0/0 = 0
5:1/0 = 0
5:1/0/terrain_set = 0
5:1/0/terrain = 0
5:1/0/terrains_peering_bit/right_side = 0
5:1/0/terrains_peering_bit/bottom_side = 0
5:1/0/terrains_peering_bit/top_side = 0
6:1/0 = 0
6:1/0/terrain_set = 0
6:1/0/terrain = 0
6:1/0/terrains_peering_bit/right_side = 0
6:1/0/terrains_peering_bit/bottom_side = 0
6:1/0/terrains_peering_bit/left_side = 0
6:1/0/terrains_peering_bit/top_side = 0
7:1/0 = 0
7:1/0/terrain_set = 0
7:1/0/terrain = 0
7:1/0/terrains_peering_bit/bottom_side = 0
7:1/0/terrains_peering_bit/left_side = 0
7:1/0/terrains_peering_bit/top_side = 0
8:1/0 = 0
8:1/0/terrain_set = 0
8:1/0/terrain = 0
8:1/0/terrains_peering_bit/bottom_side = 0
8:1/0/terrains_peering_bit/top_side = 0
5:2/0 = 0
5:2/0/terrain_set = 0
5:2/0/terrain = 0
5:2/0/terrains_peering_bit/right_side = 0
5:2/0/terrains_peering_bit/top_side = 0
6:2/0 = 0
6:2/0/terrain_set = 0
6:2/0/terrain = 0
6:2/0/terrains_peering_bit/right_side = 0
6:2/0/terrains_peering_bit/left_side = 0
6:2/0/terrains_peering_bit/top_side = 0
7:2/0 = 0
7:2/0/terrain_set = 0
7:2/0/terrain = 0
7:2/0/terrains_peering_bit/left_side = 0
7:2/0/terrains_peering_bit/top_side = 0
8:2/0 = 0
8:2/0/terrain_set = 0
8:2/0/terrain = 0
8:2/0/terrains_peering_bit/top_side = 0
5:3/0 = 0
5:3/0/terrain_set = 0
5:3/0/terrain = 0
5:3/0/terrains_peering_bit/right_side = 0
6:3/0 = 0
6:3/0/terrain_set = 0
6:3/0/terrain = 0
6:3/0/terrains_peering_bit/right_side = 0
6:3/0/terrains_peering_bit/left_side = 0
7:3/0 = 0
7:3/0/terrain_set = 0
7:3/0/terrain = 0
7:3/0/terrains_peering_bit/left_side = 0
8:3/0 = 0
8:3/0/terrain_set = 0
8:3/0/terrain = 0

[sub_resource type="TileSet" id="TileSet_gekt6"]
tile_size = Vector2i(64, 64)
terrain_set_0/mode = 2
terrain_set_0/terrain_0/name = "Sand Yellow 0"
terrain_set_0/terrain_0/color = Color(0.5, 0.34375, 0.25, 1)
sources/0 = SubResource("TileSetAtlasSource_06mjm")

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_evn4s"]
texture = ExtResource("4_6611v")
texture_region_size = Vector2i(64, 64)
0:0/0 = 0
0:0/0/terrain_set = 0
0:0/0/terrain = 0
0:0/0/terrains_peering_bit/right_side = 0
0:0/0/terrains_peering_bit/bottom_side = 0
1:0/0 = 0
1:0/0/terrain_set = 0
1:0/0/terrain = 0
1:0/0/terrains_peering_bit/right_side = 0
1:0/0/terrains_peering_bit/bottom_side = 0
1:0/0/terrains_peering_bit/left_side = 0
2:0/0 = 0
2:0/0/terrain_set = 0
2:0/0/terrain = 0
2:0/0/terrains_peering_bit/bottom_side = 0
2:0/0/terrains_peering_bit/left_side = 0
3:0/0 = 0
3:0/0/terrain_set = 0
3:0/0/terrain = 0
3:0/0/terrains_peering_bit/bottom_side = 0
4:0/0 = 0
0:1/0 = 0
0:1/0/terrain_set = 0
0:1/0/terrain = 0
0:1/0/terrains_peering_bit/right_side = 0
0:1/0/terrains_peering_bit/bottom_side = 0
0:1/0/terrains_peering_bit/top_side = 0
1:1/0 = 0
1:1/0/terrain_set = 0
1:1/0/terrain = 0
1:1/0/terrains_peering_bit/right_side = 0
1:1/0/terrains_peering_bit/bottom_side = 0
1:1/0/terrains_peering_bit/left_side = 0
1:1/0/terrains_peering_bit/top_side = 0
2:1/0 = 0
2:1/0/terrain_set = 0
2:1/0/terrain = 0
2:1/0/terrains_peering_bit/bottom_side = 0
2:1/0/terrains_peering_bit/left_side = 0
2:1/0/terrains_peering_bit/top_side = 0
3:1/0 = 0
3:1/0/terrain_set = 0
3:1/0/terrain = 0
3:1/0/terrains_peering_bit/bottom_side = 0
3:1/0/terrains_peering_bit/top_side = 0
4:1/0 = 0
0:2/0 = 0
0:2/0/terrain_set = 0
0:2/0/terrain = 0
0:2/0/terrains_peering_bit/right_side = 0
0:2/0/terrains_peering_bit/top_side = 0
1:2/0 = 0
1:2/0/terrain_set = 0
1:2/0/terrain = 0
1:2/0/terrains_peering_bit/right_side = 0
1:2/0/terrains_peering_bit/left_side = 0
1:2/0/terrains_peering_bit/top_side = 0
2:2/0 = 0
2:2/0/terrain_set = 0
2:2/0/terrain = 0
2:2/0/terrains_peering_bit/left_side = 0
2:2/0/terrains_peering_bit/top_side = 0
3:2/0 = 0
3:2/0/terrain_set = 0
3:2/0/terrain = 0
3:2/0/terrains_peering_bit/top_side = 0
4:2/0 = 0
0:3/0 = 0
0:3/0/terrain_set = 0
0:3/0/terrain = 0
0:3/0/terrains_peering_bit/right_side = 0
1:3/0 = 0
1:3/0/terrain_set = 0
1:3/0/terrain = 0
1:3/0/terrains_peering_bit/right_side = 0
1:3/0/terrains_peering_bit/left_side = 0
2:3/0 = 0
2:3/0/terrain_set = 0
2:3/0/terrain = 0
2:3/0/terrains_peering_bit/left_side = 0
3:3/0 = 0
3:3/0/terrain_set = 0
3:3/0/terrain = 0
4:3/0 = 0

[sub_resource type="TileSet" id="TileSet_y46yn"]
tile_size = Vector2i(64, 64)
terrain_set_0/mode = 2
terrain_set_0/terrain_0/name = "grass_green 0"
terrain_set_0/terrain_0/color = Color(1, 0.0475005, 0.40658, 1)
sources/0 = SubResource("TileSetAtlasSource_evn4s")

[node name="proc_gen_world" type="Node2D"]
script = ExtResource("1_cav6w")
noise_height_texture = SubResource("NoiseTexture2D_vxu8c")

[node name="WaterLayer" type="TileMapLayer" parent="."]
tile_set = SubResource("TileSet_8xmid")

[node name="SandLand" type="TileMapLayer" parent="."]
tile_set = SubResource("TileSet_gekt6")

[node name="GrassLand" type="TileMapLayer" parent="."]
z_index = 1
tile_set = SubResource("TileSet_y46yn")

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(0.1, 0.1)
